--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -26,17 +26,36 @@ jobs:
         shell: bash
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set AWS credentials
-        run: |
-          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.10.3
+
+      - name: Create terraform.tfvars
+        run: |
+          cat <<EOF > terraform.tfvars
+          acm_certificate_arn = "${{ secrets.CERTIFICATE_ARN }}"
+          hosted_zone_id = "${{ secrets.HOSTED_ZONE_ID }}"
+          aws_access_key_id = "${{ secrets.AWS_ACCESS_KEY_ID }}"
+          aws_secret_access_key = "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          aws_region = "${{ secrets.AWS_DEFAULT_REGION }}"
+          terraform_state_bucket = "${{ secrets.TERRAFORM_STATE_BUCKET }}"
+          bucket_name = "${{ secrets.BUCKET_NAME }}"
+          domain_name = "${{ secrets.DOMAIN_NAME }}"
+          email_address = "${{ secrets.EMAIL_ADDRESS }}"
+          pagerduty_integration_url = "${{ secrets.PAGERDUTY_INTEGRATION_KEY }}"
+          pagerduty_integration_key ="${{ secrets.PAGERDUTY_INTEGRATION_URL }}"
+          slack_webhook_url = "${{ secrets.PAGERDUTY_INTEGRATION_URL }}"
+          EOF  
 
       - name: Terraform Init
         id: init
@@ -68,14 +87,33 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set AWS credentials
-        run: |
-          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: ${{ secrets.AWS_DEFAULT_REGION }}    
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.10.3
+
+      - name: Create terraform.tfvars
+        run: |
+          cat <<EOF > terraform.tfvars
+          acm_certificate_arn = "${{ secrets.CERTIFICATE_ARN }}"
+          hosted_zone_id = "${{ secrets.HOSTED_ZONE_ID }}"
+          aws_access_key_id = "${{ secrets.AWS_ACCESS_KEY_ID }}"
+          aws_secret_access_key = "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          aws_region = "${{ secrets.AWS_DEFAULT_REGION }}"
+          terraform_state_bucket = "${{ secrets.TERRAFORM_STATE_BUCKET }}"
+          bucket_name = "${{ secrets.BUCKET_NAME }}"
+          domain_name = "${{ secrets.DOMAIN_NAME }}"
+          email_address = "${{ secrets.EMAIL_ADDRESS }}"
+          pagerduty_integration_url = "${{ secrets.PAGERDUTY_INTEGRATION_KEY }}"
+          pagerduty_integration_key ="${{ secrets.PAGERDUTY_INTEGRATION_URL }}"
+          slack_webhook_url = "${{ secrets.PAGERDUTY_INTEGRATION_URL }}"
+          EOF  
 
       - name: Terraform Init
         id: init
