--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -49,7 +49,7 @@ jobs:
           hosted_zone_id = "${{ secrets.HOSTED_ZONE_ID }}"
           aws_access_key_id = "${{ secrets.AWS_ACCESS_KEY_ID }}"
           aws_secret_access_key = "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          aws_region = "${{ secrets.AWS_DEFAULT_REGION }}"
+          aws_region = "${{ secrets.AWS_REGION }}"
           terraform_state_bucket = "${{ secrets.TERRAFORM_STATE_BUCKET }}"
           bucket_name = "${{ secrets.BUCKET_NAME }}"
           domain_name = "${{ secrets.DOMAIN_NAME }}"
