--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Create terraform.tfvars
         run: |
           cat <<EOF > terraform/terraform.tfvars
-          acm_certificate_arn = "${{ secrets.CERTIFICATE_ARN }}"
+          acm_certificate_arn = "${{ secrets.ACM_CERTIFICATE_ARN }}"
           hosted_zone_id = "${{ secrets.HOSTED_ZONE_ID }}"
           aws_access_key_id = "${{ secrets.AWS_ACCESS_KEY_ID }}"
           aws_secret_access_key = "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
@@ -111,7 +111,7 @@ jobs:
       - name: Create terraform.tfvars
         run: |
           cat <<EOF > terraform/terraform.tfvars
-          acm_certificate_arn = "${{ secrets.CERTIFICATE_ARN }}"
+          acm_certificate_arn = "${{ secrets.ACM_CERTIFICATE_ARN }}"
           hosted_zone_id = "${{ secrets.HOSTED_ZONE_ID }}"
           aws_access_key_id = "${{ secrets.AWS_ACCESS_KEY_ID }}"
           aws_secret_access_key = "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
