--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -4,19 +4,18 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false # https://github.com/cypress-io/github-action/issues/48
+      fail-fast: false
       matrix:
-        containers: [1] # Only uses 1 instance, no parallelization
+        containers: [1]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          start: npm start
-          wait-on: 'http://localhost:3000'
+          wait-on: 'http://localhost:3000' # If your tests don't need a server to start
           record: true
-          parallel: false # Disable parallelization here
+          parallel: false
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
