--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -7,8 +7,10 @@ on:
       - completed
 
 jobs:
-  cypress-run:
+  pre-check:
     runs-on: ubuntu-latest
+    outputs:
+      should_run: ${{ steps.check-jobs.outputs.deploy_succeeded }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,20 +29,20 @@ jobs:
           echo "Job conclusion: $jobs"
 
           if [[ "$jobs" == "success" ]]; then
-            echo "deploy_succeeded=true" >> $GITHUB_ENV
-            echo "::set-output name=deploy_succeeded::true"
+            echo "deploy_succeeded=true" >> $GITHUB_OUTPUT
           else
-            echo "deploy_succeeded=false" >> $GITHUB_ENV
-            echo "::set-output name=deploy_succeeded::false"
+            echo "deploy_succeeded=false" >> $GITHUB_OUTPUT
           fi
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Stop if infrastructure-deployment did not succeed
-        if: steps.check-jobs.outputs.deploy_succeeded != 'true'
-        run: |
-          echo "The infrastructure-deployment job did not succeed. Exiting..."
-          exit 1
+  cypress-run:
+    runs-on: ubuntu-latest
+    needs: pre-check
+    if: needs.pre-check.outputs.should_run == 'true'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -65,8 +67,8 @@ jobs:
         run: |
           if [ "${{ job.status }}" == "success" ]; then
             echo "Cypress tests passed!"
-            echo "cypress-status=success" >> $GITHUB_ENV
+            echo "cypress-status=success" >> $GITHUB_OUTPUT
           else
             echo "Cypress tests failed!"
-            echo "cypress-status=failure" >> $GITHUB_ENV
+            echo "cypress-status=failure" >> $GITHUB_OUTPUT
           fi
