Lambda_Function_Test

--- a/.github/workflows/visitor_counter_lambdatest.yaml
+++ b/.github/workflows/visitor_counter_lambdatest.yaml
@@ -25,4 +25,4 @@ jobs:
 
     - name: Run tests with pytest
       run: |
-        pytest tests/test_lambda.py  # Run the test script you provided
+        pytest tests/visitor_counter_testscript.py  # Run the test script you provided
