--- a/.github/workflows/visitor_counter_lambdatest.yaml
+++ b/.github/workflows/visitor_counter_lambdatest.yaml
@@ -23,6 +23,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements-test.txt  # Install dependencies from requirements-test.txt
 
+    - name: Set AWS environment variables
+      env:
+        AWS_DEFAULT_REGION: us-east-1  # Set the AWS region
+        DYNAMODB_TABLE: VisitorCounterTable  # Set the DynamoDB table name (if needed)
+      run: |
+        echo "AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION" >> $GITHUB_ENV
+        echo "DYNAMODB_TABLE=$DYNAMODB_TABLE" >> $GITHUB_ENV
+
     - name: Run tests with pytest
       run: |
         pytest tests/visitor_counter_testscript.py  # Run the test script you provided
