--- a/.github/workflows/visitor_counter_lambdatest.yaml
+++ b/.github/workflows/visitor_counter_lambdatest.yaml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - name: Checkout the code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4.2.2
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5.4.0
       with:
         python-version: '3.8'  # Specify the Python version to use
 
@@ -23,13 +23,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements-test.txt  # Install dependencies from requirements-test.txt
 
-    - name: Set AWS environment variables
-      env:
-        AWS_DEFAULT_REGION: us-east-1  # Set the AWS region
-        DYNAMODB_TABLE: VisitorCounterTable  # Set the DynamoDB table name (if needed)
-      run: |
-        echo "AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION" >> $GITHUB_ENV
-        echo "DYNAMODB_TABLE=$DYNAMODB_TABLE" >> $GITHUB_ENV
+    - name: Set up AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4.1.0
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
 
     - name: Run tests with pytest
       run: |
