--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -74,8 +74,8 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        env:
-          TF_LOG: DEBUG
+        #env:
+          #TF_LOG: DEBUG
         run: cd terraform && terraform apply -auto-approve tfplan
       
 
