--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -15,12 +15,44 @@ on:
           - destroy
 
 jobs:
+  visitor-count-lambda-function-test:
+    name: "Visitor Count Lambda Function Test"
+    runs-on: ubuntu-latest
+    if: >-
+      !(github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'destroy') &&
+      !(github.event_name == 'push' && contains(github.event.head_commit.message, 'destroy'))
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v4.2.2
+
+      - name: Set up Python
+        uses: actions/setup-python@v5.4.0
+        with:
+          python-version: '3.8'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-test.txt
+
+      - name: Set up AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4.1.0
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Run tests with pytest
+        run: |
+          pytest tests/visitor_counter_testscript.py
+
   infrastructure-deployment:
     if: >-
-      (github.event_name == 'push' && !contains(github.event.head_commit.message, 'destroy')) ||
-      (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'create')
+      (github.event_name == 'push' && !contains(github.event.head_commit.message, 'destroy') && needs.visitor-count-lambda-function-test.result == 'success') ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'create' && needs.visitor-count-lambda-function-test.result == 'success')
     name: "Infrastructure Deployment"
     runs-on: ubuntu-latest
+    needs: visitor-count-lambda-function-test
     defaults:
       run:
         shell: bash
@@ -34,8 +66,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-        #env:
-          #TF_LOG: DEBUG
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
@@ -74,10 +104,7 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        #env:
-          #TF_LOG: DEBUG
         run: cd terraform && terraform apply -auto-approve tfplan
-      
 
   infrastructure-cleanup:
     if: >-
@@ -109,7 +136,7 @@ jobs:
           cat <<EOF > terraform/terraform.tfvars
           acm_certificate_arn = "${{ secrets.ACM_CERTIFICATE_ARN }}"
           aws_access_key_id = "${{ secrets.AWS_ACCESS_KEY_ID }}"
-          aws_secret_access_key = "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          aws_secret_access-key = "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           aws_region = "${{ secrets.AWS_DEFAULT_REGION }}"
           bucket_name = "${{ secrets.BUCKET_NAME }}"
           domain_name = "${{ secrets.DOMAIN_NAME }}"
@@ -118,7 +145,7 @@ jobs:
           pagerduty_integration_key = "${{ secrets.PAGERDUTY_INTEGRATION_KEY }}"
           slack_webhook_url = "${{ secrets.SLACK_WEBHOOK_URL }}"
           EOF
-        
+
       - name: Mask AWS Account ID in Logs
         run: echo "::add-mask::${{ secrets.AWS_ACCOUNT_ID }}"
 
@@ -128,6 +155,4 @@ jobs:
 
       - name: Terraform Destroy
         id: destroy
-        #env:
-          #TF_LOG: DEBUG
         run: cd terraform && terraform destroy -auto-approve
