--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Only run if the previous workflow was successful
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
